# py-rally

./: .gitignore  LICENSE.txt  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
py_rally/: __init__.py  abis.py  builder.py  client.py  config.py  constants.py  custom_types.py  exceptions.py  gsn.py  helpers.py  network.py
py_rally/ABI/: IERC20.json  IForwarder.json  IRelayHub.json  tokenFaucetData.json
py_rally/gsn/: __init__.py
tests/: test_client.py  test_helpers.py
