[tool.poetry]
name = "py-rally"
version = "0.0.1"
description = "Python client for RallyProtocol"
authors = ["Tobiloba Emmanuel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
aiohttp = "3.8.5"
web3 = "6.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.275"
black = "23.3.0"
isort = "5.12.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["py_rally"]
omit = ["*/tests/*", "conftest.py"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39']
exclude = '''
  /(
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "W",
    "C",
    "N",
    "B",
    "G",
    "ISC",
    "ICN",
    "T",
    "UP",
    "YTT",
    "S",
    "BLE",
    "FBT",
    "A",
    "Q",
    "ERA",
    "PGH",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PL",
    "PIE",
    "PYI",
    "COM",
    "DTZ",
    "EXE",
    "INP",
    "PT",
    "TCH",
    "PTH",
    "INT",
    "TRY",
    "RSE",
    "SLF",
    "RUF",
]
exclude = ["node_modules", "venv"]
ignore = [
    "SIM115",
    "TRY003",
    "PTH123",
    "S113",
    "DTZ005",
    "UP007",
    "UP038",
    "PLR0913",
    "G004"  # f-strings are easier to read. Change if performance is impacted significantly.
]

[tool.ruff.per-file-ignores]
 "**/test_**.py" = ["S101"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
known_django = "django"
combine_as_imports = true
lines_between_sections = 1
include_trailing_comma = true
default_section = "THIRDPARTY"
known_first_party = "blockthrift"
known_rest_framework = "rest_framework"
skip_glob = ["**/.venv/*", "**/migrations/*"]
sections = ["FUTURE","STDLIB","THIRDPARTY","DJANGO", "REST_FRAMEWORK", "FIRSTPARTY","LOCALFOLDER"]